--- a/client/app/communityProfile/communityProfile.html
+++ b/client/app/communityProfile/communityProfile.html
@@ -11,6 +11,7 @@
       <div class="communityProfBasicInfo"
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
       </div>
+      <button type="button" class="btn btn-warning">Join!</button>
     </div>
   </div>
 
